--- a/index.html
+++ b/index.html
@@ -61,8 +61,14 @@
 				<p>Import your own chess games from various online sources such as chess.com or Lichess or from your personal PGN files.
 					The app will screen your moves and generate puzzles from blunders and mistakes that you have made in these games. </p>
 				<p>Then, you can replay the positions and find better moves.</p>
-				<p>If requested, the app supports you by recommending best moves based on chess engine evaluations. Like this, you can learn from your mistakes and improve your chess skills!</p>
+				<p>In addition, the app supports you by recommending best moves based on chess engine evaluations. Like this, you can learn from your mistakes and improve your chess skills!</p>
 
+			</div>
+		</section>
+		<section class="app__fulldescription app__section container">
+			<h2 class="app__section-title">How to avoid blunders</h2>
+			<div class="app__fulldescription-content">
+				<p>Obviously, while learning from your blunders it is helpful, you also need a strategy to avoid blunders in the first place.</p>
 			</div>
 		</section>
 		<!-- <section class="app__featured app__section container">
