--- a/page-1.html
+++ b/page-1.html
@@ -40,7 +40,16 @@
 				</p>
 				<ul class="footer__links">
 					<li class="footer__link">
-						<a href="page-1.html">Privacy</a>
+						<a href="index.html">Main</a>
+					</li>
+					  <li class="footer__link">
+						<a href="mailto:chessblundertrainer@gmail.com">Contact</a>
+					  </li>
+					  <li class="footer__link">
+						<a href="https://github.com/Mercutio1243/chessblundertrainerpage">Github</a>
+					  </li>
+					<li class="footer__link">
+						<a href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a>
 					</li>
 				</ul>
 			</div>
