--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
-			<h2 class="app__section-title">How the app works</h2>
+			<h2 class="app__section-title">How the Chess Blunder Trainer App Works</h2>
 			<div class="app__fulldescription-content">
 				<p>Import your own chess games from various online sources such as chess.com or Lichess or from your personal PGN files.
 					The app will screen your moves and generate puzzles from blunders and mistakes that you have made in these games. </p>
@@ -66,11 +66,30 @@
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
-			<h2 class="app__section-title">How to avoid blunders</h2>
+			<h2 class="app__section-title">Further Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
-				<p>Obviously, while learning from your blunders it is helpful, you also need a strategy to avoid blunders in the first place.</p>
+			  <p>While the app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place.</p>			  
+			  <!-- Offensive Strategies -->
+			  <h4>Offensive</h4>
+			  <p>One proven approach to prevent missing out on good offensive moves is the "Checks, Captures, and Threats (CCT)" rule. Before making a move, go through the following checklist:</p>
+			  <ul>
+				<li><strong>Checks:</strong> Look for any checks that you can deliver. A check might force the opponent into a defensive position, giving you an advantage.</li>
+				<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
+				<li><strong>Threats:</strong> Identify any threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage, forcing the opponent to react by moving pieces and opening new ways of attack.</li>
+			  </ul>
+			  <p>By consistently applying the CCT rule before you make your move, you significantly reduce the chances of overlooking a powerful offensive opportunity.</p>
+		  
+			  <!-- Defensive Strategies -->
+			  <h4>Defensive</h4>
+			  <p>Maintaining a solid defense ensures you don't fall into traps or overlook threats from your opponent.</p>
+			  <ul>
+				<li><strong>Opponent's plan:</strong> Look at your opponent's last move, ask yourself, "What is the idea behind his last move and what is he going to do next?".</li>
+				<li><strong>Opponent's threats:</strong> Apply the CCT rule from your opponents perspective: "Which checks, captures or forcing moves/threats can my opponent play?" Make sure that have a response to each of these moves. This is especially crucial if you are playing the oppontent's half of the board.</li>
+				<li><strong>Simplify the position:</strong> When in time pressure, simplify the position: try to exchange pieces to reduce complications and avoid overly complicated calculations</li>
+			  </ul>
+			  <p>Defensive play requires vigilance and a proactive approach to safeguarding your position while looking for opportunities to transition into offensive play.</p>
 			</div>
-		</section>
+		  </section>
 		<!-- <section class="app__featured app__section container">
 	<h2 class="app__section-title">More information</h2>
 	<div class="app__featured-content">
