--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="app__fulldescription-content">
 				<p>Import your own chess games from various online sources such as chess.com or Lichess or from your personal PGN files.
 					The app will screen your moves and generate puzzles from blunders and mistakes that you have made in these games. </p>
-				<p>Then, you can replay the positions and find better moves.</p>
+				<p>Then, you can replay the positions as puzzles and find better moves.</p>
 				<p>In addition, the app supports you by recommending best moves based on chess engine evaluations. Like this, you can learn from your mistakes and improve your chess skills!</p>
 
 			</div>
@@ -71,23 +71,20 @@
 			  <p>While the app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place.</p>			  
 			  <!-- Offensive Strategies -->
 			  <h4>Offensive</h4>
-			  <p>One proven approach to prevent missing out on good offensive moves is the "Checks, Captures, and Threats (CCT)" rule. Before making a move, go through the following checklist:</p>
+			  <p>One proven approach to prevent missing out on good offensive moves is the <strong>Checks, Captures, and Threats (CCT)</strong> rule. Before making your move, go through the following checklist:</p>
 			  <ul>
-				<li><strong>Checks:</strong> Look for any checks that you can deliver. A check might force the opponent into a defensive position, giving you an advantage.</li>
+				<li><strong>Checks:</strong> Look for all checks that you can deliver. Often, checks that do not seem to lead to anything on further view, can open new ways of attack.</li>
 				<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
-				<li><strong>Threats:</strong> Identify any threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage, forcing the opponent to react by moving pieces and opening new ways of attack.</li>
+				<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
 			  </ul>
-			  <p>By consistently applying the CCT rule before you make your move, you significantly reduce the chances of overlooking a powerful offensive opportunity.</p>
-		  
 			  <!-- Defensive Strategies -->
 			  <h4>Defensive</h4>
 			  <p>Maintaining a solid defense ensures you don't fall into traps or overlook threats from your opponent.</p>
 			  <ul>
-				<li><strong>Opponent's plan:</strong> Look at your opponent's last move, ask yourself, "What is the idea behind his last move and what is he going to do next?".</li>
-				<li><strong>Opponent's threats:</strong> Apply the CCT rule from your opponents perspective: "Which checks, captures or forcing moves/threats can my opponent play?" Make sure that have a response to each of these moves. This is especially crucial if you are playing the oppontent's half of the board.</li>
-				<li><strong>Simplify the position:</strong> When in time pressure, simplify the position: try to exchange pieces to reduce complications and avoid overly complicated calculations</li>
+				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move, ask yourself, "What is the intention behind this move and what is he going to do next?"</li>
+				<li><strong>Identify threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
+				<li><strong>Simplify the position:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>		  
 			  </ul>
-			  <p>Defensive play requires vigilance and a proactive approach to safeguarding your position while looking for opportunities to transition into offensive play.</p>
 			</div>
 		  </section>
 		<!-- <section class="app__featured app__section container">
