--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 			  </ul>
 			  <!-- Defensive Strategies -->
 			  <h4>Defensive</h4>
-			  <p>Maintaining a solid defense ensures you don't fall into traps or overlook threats from your opponent.</p>
+			  <p>Make sure that you do not focus exclusively on your own game plan but actively take the opponent into account.</p>
 			  <ul>
-				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move, ask yourself, "What is the intention behind this move and what is he going to do next?"</li>
+				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move, ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
 				<li><strong>Identify threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
 				<li><strong>Simplify the position:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>		  
 			  </ul>
