--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
 					The app will screen your moves and generate puzzles from blunders and mistakes that you have made in these games. </p>
 				<p>Then, you can replay the positions as puzzles and find better moves.</p>
 				<p>In addition, the app supports you by recommending best moves based on chess engine evaluations. Like this, you can learn from your mistakes and improve your chess skills!</p>
-
+			</div>
+			<div class="app__buttons app__buttons--desktop">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
+					<img src="assets/google-play-badge.png" alt="Get on Google Play">
+				</a>
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
 			<h2 class="app__section-title">Further Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
-			  <p>While the app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place.</p>			  
+			  <p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place.</p>			  
 			  <!-- Offensive Strategies -->
 			  <h4>Offensive</h4>
 			  <p>One proven approach to prevent missing out on good offensive moves is the <strong>Checks, Captures, and Threats (CCT)</strong> rule. Before making your move, go through the following checklist:</p>
@@ -87,6 +91,14 @@
 			  </ul>
 			</div>
 		  </section>
+		  <section class="app__fulldescription app__section container">
+		  <p>Use the chess blunder trainer app to avoid repeating your mistakes! All the best for improving your chess skills!</p>
+		  <div class="app__buttons app__buttons--desktop">
+			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
+				<img src="assets/google-play-badge.png" alt="Get on Google Play">
+			</a>
+		</div>
+		</section>
 		<!-- <section class="app__featured app__section container">
 	<h2 class="app__section-title">More information</h2>
 	<div class="app__featured-content">
