--- a/page-1.html
+++ b/page-1.html
@@ -25,8 +25,8 @@
 				<h1 class="page__title">About</h1>
 			</header>
 			<div class="page__content">
-				<p>The chess blunder trainer is an app project by Thomas Koeppen aka Mercutio1243</p>
-				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> for any feedback or questions</p>
+				<p>The chess blunder trainer app is an project developed by Thomas Koeppen aka Mercutio1243.</p>
+				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> for any feedback or questions!</p>
 			</div>
 		</article>
 	</main>
