--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 			<h2 class="app__section-title">How the Chess Blunder Trainer App Works</h2>
 			<div class="app__fulldescription-content">
 				<p>Import your own chess games from various online sources such as chess.com or Lichess or from your personal PGN files.
-					The app will screen your moves and generate puzzles from blunders and mistakes that you have made in these games. </p>
-				<p>Then, you can replay the positions as puzzles and find better moves.</p>
-				<p>In addition, the app supports you by recommending best moves based on chess engine evaluations. Like this, you can learn from your mistakes and improve your chess skills!</p>
+					The app will screen your moves and generate puzzles from the blunders and mistakes that you have made in these games.</p>
+				<p>Then, you can replay the positions and find better moves.</p>
+				<p>The app will support you by assessing your moves and recommending best moves based on chess engine evaluations. Like this, you will learn from your past blunders and improve your chess skills!</p>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
