--- a/index.html
+++ b/index.html
@@ -72,18 +72,13 @@
 		<section class="app__fulldescription app__section container">
 			<h2 class="app__section-title">Further Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
-			  <p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place.</p>			  
-			  <!-- Offensive Strategies -->
-			  <h4>Offensive</h4>
-			  <p>One proven approach to prevent missing out on good offensive moves is the <strong>Checks, Captures, and Threats (CCT)</strong> rule. Before making your move, go through the following checklist:</p>
+			  <p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 			  <ul>
 				<li><strong>Checks:</strong> Look for all checks that you can deliver. Often, checks that do not seem to lead to anything on further view, can open new ways of attack.</li>
 				<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
 				<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
 			  </ul>
-			  <!-- Defensive Strategies -->
-			  <h4>Defensive</h4>
-			  <p>Make sure that you do not focus exclusively on your own game plan but actively take the opponent into account.</p>
+			  <p>In addition, make sure that you do not focus exclusively on your own game but actively take the opponent into account.</p>
 			  <ul>
 				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move, ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
 				<li><strong>Identify threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
