--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</div>
 		<section class="app__screenshots app__section">
 			<div class="container">
-				<h2 class="app__section-title">Screenshots</h2>
+				<h2 class="app__section-title">Screenshots of the App</h2>
 			</div>
 			<div class="app__screenshots-wrapper container-desktop">
 				<div class="app__screenshots-list">
