--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
 				<li><strong>Captures:</strong> Examine all possible captures. Sometimes, a capture can open up the board or remove a key defender, leading to a more favorable position.</li>
 				<li><strong>Threats:</strong> Identify all threats you can make. A threat could be anything from threatening to win material in the next move to creating a strong positional advantage. It forces the opponent to react, e.g., by moving pieces, and may open new attack vectors.</li>
 			  </ul>
-			  <p>In addition, make sure that you do not focus exclusively on your own game but actively take the opponent into account.</p>
+			  <p>In addition, make sure that you do not focus exclusively on your own strategy but actively take the opponent into account.</p>
 			  <ul>
-				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move, ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
-				<li><strong>Identify threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
-				<li><strong>Simplify the position:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>		  
+				<li><strong>Understand the opponent's plan:</strong> Look at your opponent's last move and ask yourself, "Why did they make this move? What has changed in the position? What are they going to do next?"</li>
+				<li><strong>Identify immediate threats:</strong> Use the CCT rule from your opponent's viewpoint to anticipate possible checks, captures, and threats. Make sure that have a counter to each of these moves, particularly if you are playing within opponent's half of the board.</li>
+				<li><strong>Handle time pressure:</strong> When in time pressure, aim to simplify the position: exchange pieces to reduce complications, avoid overly complicated calculations</li>		  
 			  </ul>
 			</div>
 		  </section>
