--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
 				</a>
 			</div>
+			<div class="app__buttons app__buttons--mobile container">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
+					<img src="assets/google-play-badge.png" alt="Get on Google Play">
+				</a>
+			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
 			<h2 class="app__section-title">Further Strategies to Avoid Blunders</h2>
@@ -89,6 +94,11 @@
 		  <section class="app__fulldescription app__section container">
 		  <p>Use the chess blunder trainer app to avoid repeating your mistakes! All the best for improving your chess skills!</p>
 		  <div class="app__buttons app__buttons--desktop">
+			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
+				<img src="assets/google-play-badge.png" alt="Get on Google Play">
+			</a>
+		</div>
+		<div class="app__buttons app__buttons--mobile container">
 			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
 			</a>
