--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 </head>
 
+<meta property=”og:image” content=”content/image/dyox2t2omayp58e331p6.png”>
+
 <body>
 	<main>
 		<header class="app__header container">
