--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<meta property=”og:image” content=”content/image/dyox2t2omayp58e331p6.png”>
+<meta property=”og:image” itemprop="image" content=”content/image/dyox2t2omayp58e331p6.png”>
 
 <body>
 	<main>
