--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 
 	<meta property="og:title" content="Chess Blunder Trainer" />
 	<meta property="og:description" content="Replay blunders from your own chess games to improve your skills!" />
-	<meta property="og:image" content="assets/og-image.png" />
+	<meta property="og:image" content="content/image/dyox2t2omayp58e331p6.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="stylesheet" href="assets/style.css" />
 
 </head>
-
-<meta property=”og:image” itemprop="image" content=”content/image/dyox2t2omayp58e331p6.png”>
 
 <body>
 	<main>
