--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<meta property="og:title" content="Chess Blunder Trainer" />
 	<meta property="og:description" content="Replay blunders from your own chess games to improve your skills!" />
-	<meta property="og:image" content="content/image/dyox2t2omayp58e331p6.png" />
+	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/dyox2t2omayp58e331p6.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="stylesheet" href="assets/style.css" />
