--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/dyox2t2omayp58e331p6.png" alt="Chess Blunder Trainer"></div>
 			<div class="app__infos">
 				<h1 class="app__name">Chess Blunder Trainer</h1>
-				<p class="app__description">Replay blunders from your own chess games to improve your skills!</p>
+				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 				<div class="app__buttons app__buttons--desktop">
 					<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
 						<img src="assets/google-play-badge.png" alt="Get on Google Play">
@@ -58,10 +58,12 @@
 		<section class="app__fulldescription app__section container">
 			<h2 class="app__section-title">How the Chess Blunder Trainer App Works</h2>
 			<div class="app__fulldescription-content">
-				<p>Import your own chess games from various online sources such as chess.com or Lichess or from your personal PGN files.
-					The app will screen your moves and generate puzzles from the blunders and mistakes that you have made in these games.</p>
-				<p>Then, you can replay the positions and find better moves.</p>
-				<p>The app will support you by assessing your moves and recommending best moves based on chess engine evaluations. Like this, you will learn from your past blunders and improve your chess skills!</p>
+				<ol>
+					<li><strong>Easily import</strong> your own chess games from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
+					<li><strong>Replay</strong> your blunders as personalized puzzles from your game and find better moves.</li>
+					<li><strong>Get support</strong> by the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
+					<li><strong>Learn</strong> from your past blunders and improve your chess skills!</li>
+				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
