--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<li><strong>Easily import</strong> your own chess games from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
 					<li><strong>Replay</strong> your blunders as personalized puzzles from your game and find better moves.</li>
 					<li><strong>Get support</strong> by the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
-					<li><strong>Learn</strong> from your past blunders and improve your chess skills!</li>
+					<li><strong>Learn</strong> from your blunders and improve your chess skills!</li>
 				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
@@ -77,7 +77,7 @@
 			</div>
 		</section>
 		<section class="app__fulldescription app__section container">
-			<h2 class="app__section-title">Further Strategies to Avoid Blunders</h2>
+			<h2 class="app__section-title">Additional Strategies to Avoid Blunders</h2>
 			<div class="app__fulldescription-content">
 			  <p>While the chess blunder trainer app helps you to learn from your played blunders, you also need routines to avoid blunders in the first place. One proven approach is the <strong>Checks, Captures, and Threats (CCT)</strong> rule:</p>
 			  <ul>
