--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
 			<div class="app__fulldescription-content">
 				<ol>
 					<li><strong>Easily import</strong> your own chess games from various (online) sources such as chess.com or Lichess, or from your personal PGN files.</li>
-					<li><strong>Replay</strong> your blunders as personalized puzzles from your game and find better moves.</li>
+					<li><strong>Replay</strong> your blunders as personalized puzzles from your games and find better moves.</li>
 					<li><strong>Get support</strong> by the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
 					<li><strong>Learn</strong> from your blunders and improve your chess skills!</li>
+					<li>Do not worry about money as the app is completely<strong>free</strong>.</li>
 				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
