--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/ydaxbps3h8k7leskos8x.png" />
 
-	<meta property="og:title" content="Chess Blunder Trainer" />
-	<meta property="og:description" content="Replay blunders from your own chess games to improve your skills!" />
+	<meta property="og:title" content="Chess Blunder Trainer App" />
+	<meta property="og:description" content="Replay blunders from your own chess games to improve your chess skills!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/dyox2t2omayp58e331p6.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
@@ -23,7 +23,7 @@
 		<header class="app__header container">
 			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/dyox2t2omayp58e331p6.png" alt="Chess Blunder Trainer"></div>
 			<div class="app__infos">
-				<h1 class="app__name">Chess Blunder Trainer</h1>
+				<h1 class="app__name">Chess Blunder Trainer App</h1>
 				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 				<div class="app__buttons app__buttons--desktop">
 					<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
