--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<li><strong>Replay</strong> your blunders as personalized puzzles from your games and find better moves.</li>
 					<li><strong>Get support</strong> by the app in assessing your moves and recommendations of best moves based on chess engine evaluations.</li>
 					<li><strong>Learn</strong> from your blunders and improve your chess skills!</li>
-					<li><strong>Enjoy</strong> the app as it is free and wkthout ads.</li>
+					<li><strong>Enjoy</strong> the app free and without ads.</li>
 				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
