--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8" />
 	<title>Chess Blunder Trainer</title>
 
-	<meta name="description" content="Replay blunders from your own chess games to improve your skills!" />
+	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/ydaxbps3h8k7leskos8x.png" />
 
 	<meta property="og:title" content="Chess Blunder Trainer App" />
-	<meta property="og:description" content="Replay blunders from your own chess games to improve your chess skills!" />
+	<meta property="og:description" content="Free app to replay blunders from your own chess games and improve your chess skills!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/dyox2t2omayp58e331p6.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
@@ -21,7 +21,7 @@
 <body>
 	<main>
 		<header class="app__header container">
-			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/dyox2t2omayp58e331p6.png" alt="Chess Blunder Trainer"></div>
+			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/dyox2t2omayp58e331p6.png" alt="Chess Blunder Trainer App"></div>
 			<div class="app__infos">
 				<h1 class="app__name">Chess Blunder Trainer App</h1>
 				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
