--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" href="content/image/ydaxbps3h8k7leskos8x.png" />
+	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
 	<meta property="og:title" content="Chess Blunder Trainer App" />
 	<meta property="og:description" content="Free app to replay blunders from your own chess games and improve your chess skills!" />
-	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/dyox2t2omayp58e331p6.png" />
+	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="stylesheet" href="assets/style.css" />
@@ -21,7 +21,7 @@
 <body>
 	<main>
 		<header class="app__header container">
-			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/dyox2t2omayp58e331p6.png" alt="Chess Blunder Trainer App"></div>
+			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo_app.png" alt="Chess Blunder Trainer App"></div>
 			<div class="app__infos">
 				<h1 class="app__name">Chess Blunder Trainer App</h1>
 				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
@@ -43,14 +43,14 @@
 			</div>
 			<div class="app__screenshots-wrapper container-desktop">
 				<div class="app__screenshots-list">
-					<a href="content/image/i8uf2ki7h251kpmr76ta.jpg" class="lightbox">
-						<img src="content/image/i8uf2ki7h251kpmr76ta.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/screenshot_1.jpg" class="lightbox">
+						<img src="content/image/screenshot_1.jpg" class="app__screenshot" alt="" />
 					</a>
-					<a href="content/image/t812e5n5kxkhugud7hgf.jpg" class="lightbox">
-						<img src="content/image/t812e5n5kxkhugud7hgf.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/screenshot_2.jpg" class="lightbox">
+						<img src="content/image/screenshot_2.jpg" class="app__screenshot" alt="" />
 					</a>
-					<a href="content/image/6mag7wvjjeufxkmg8ew5.jpg" class="lightbox">
-						<img src="content/image/6mag7wvjjeufxkmg8ew5.jpg" class="app__screenshot" alt="" />
+					<a href="content/image/screenshot_3.jpg" class="lightbox">
+						<img src="content/image/screenshot_3.jpg" class="app__screenshot" alt="" />
 					</a>
 				</div>
 			</div>
@@ -95,7 +95,7 @@
 			</div>
 		  </section>
 		  <section class="app__fulldescription app__section container">
-		  <p>Use the chess blunder trainer app to avoid repeating your mistakes! Have much fun improving your chess skills!</p>
+		  <p>Use the chess blunder trainer app to avoid repeating your mistakes! And have much fun improving your chess skills!</p>
 		  <div class="app__buttons app__buttons--desktop">
 			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" class="app__button-play" target="_blank" title="Get on Google Play">
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
