--- a/page-1.html
+++ b/page-1.html
@@ -7,11 +7,11 @@
 
 	<meta name="description" content="Replay blunders from your own chess games to improve your skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="icon" href="content/image/ydaxbps3h8k7leskos8x.png" />
+	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
 	<meta property="og:title" content="About - Chess Blunder Trainer" />
 	<meta property="og:description" content="Replay blunders from your own chess games to improve your skills!" />
-	<meta property="og:image" content="assets/og-image.png" />
+	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="stylesheet" href="assets/style.css" />
