--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8" />
 	<title>About - Chess Blunder Trainer</title>
 
-	<meta name="description" content="Replay blunders from your own chess games to improve your skills!" />
+	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles and improve your chess skills!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/logo_app_favicon.png" />
 
 	<meta property="og:title" content="About - Chess Blunder Trainer" />
-	<meta property="og:description" content="Replay blunders from your own chess games to improve your skills!" />
+	<meta property="og:description" content="Free app to replay blunders from your own chess games and improve your chess skills!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
 
 	<link rel="stylesheet" href="assets/tobi.css" />
@@ -25,8 +25,8 @@
 				<h1 class="page__title">About</h1>
 			</header>
 			<div class="page__content">
-				<p>The chess blunder trainer app is an project developed by Thomas Koeppen aka Mercutio1243.</p>
-				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> for any feedback or questions!</p>
+				<p>The chess blunder trainer is an app developed by Thomas Koeppen aka Mercutio1243.</p>
+				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
 			</div>
 		</article>
 	</main>
