--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				</p>
 				<ul class="footer__links">
 					<li class="footer__link">
-						<a href="page-1.html">About</a>
+						<a href="about.html">About</a>
 					</li>
 					  <li class="footer__link">
 						<a href="mailto:chessblundertrainer@gmail.com">Contact</a>
