--- a/index.html
+++ b/index.html
@@ -112,16 +112,10 @@
 						<a href="about.html">About</a>
 					</li>
 					<li class="footer__link">
-						<a href="blunders.html">Blunders</a>
+						<a href="blunder.html">Blunders</a>
 					</li>
 					<li class="footer__link">
 						<a href="mailto:chessblundertrainer@gmail.com">Contact</a>
-					</li>
-					<li class="footer__link">
-						<a href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a>
-					</li>
-					<li class="footer__link">
-						<a href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a>
 					</li>
 				</ul>
 			</div>
